# cmake-application-macos

./: README.md
MultiTouchWindow/: AppDelegate.h  AppDelegate.m  CMakeLists.txt  ViewController.h  ViewController.m  main.m
MultiTouchWindow.xcodeproj/: project.pbxproj
MultiTouchWindow.xcodeproj/xcuserdata/smallville7123.xcuserdatad/xcschemes/: xcschememanagement.plist
MultiTouchWindow/Base.lproj/: Main.storyboard
